--- a/scss/main.scss
+++ b/scss/main.scss
@@ -368,7 +368,8 @@ button {
 				background-color: #0052c1;
 			}
 			&:nth-child(3) {
-				background-image: url(/dist/assets/img/nutrition.png);
+				background-color: #76b58b;
+				background-image: url(dist/assets/img/nutrition.png);
 				background-size: cover;
 				background-repeat: no-repeat;
 			}
