--- a/scss/main.scss
+++ b/scss/main.scss
@@ -369,7 +369,7 @@ button {
 			}
 			&:nth-child(3) {
 				background-color: #76b58b;
-				background-image: url(dist/assets/img/nutrition.png);
+				background-image: url(https://antonvasilenko00.github.io/ADC/.dist/assets/img/nutrition.png);
 				background-size: cover;
 				background-repeat: no-repeat;
 			}
