--- a/scss/main.scss
+++ b/scss/main.scss
@@ -209,6 +209,7 @@ button {
 	}
 
 	&__link {
+		color: #22356f;
 		font-weight: 400;
 		padding: 10px 7px;
 	}
@@ -370,7 +371,7 @@ button {
 			}
 			&:nth-child(3) {
 				background-color: #76b58b;
-				background-image: url(https://antonvasilenko00.github.io/Thrivetalk-landing-page//dist/assets/img/nutrition.png);
+				background-image: url(https://antonvasilenko00.github.io/Thrivetalk-landing-page/./dist/assets/img/nutrition.png);
 				background-size: cover;
 				background-repeat: no-repeat;
 			}
